--- a/portfolio.css
+++ b/portfolio.css
@@ -41,9 +41,21 @@ h1 {
 	font-size: 75px;
 	font-weight: 400;
 	margin: 0;
-	line-height: 1;
+	line-height: 1.5;
 	text-align: center;
-	
+	text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+	font-family: Cambria, , "Liberation Serif" , "serif";
 }
 h2 {
 	font-size: 30px;
@@ -51,6 +63,10 @@ h2 {
 	margin: 0;
 	text-align: center;
 	text-decoration-line: underline;
+	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+	font-style: oblique;
+	line-height: 2.5;
+	text-align: center
 }
 .content-wrap {
 	width: 1000px;
