--- a/portfolio.css
+++ b/portfolio.css
@@ -5,6 +5,61 @@
 /* Global Styles
 ------------------*/
 
+ul {                                   
+text-align: left;                   
+list-style: none;                  
+}
+ul li {                                 
+font: bold 12px/18px sans-serif;
+display: inline-block;          
+position: relative;                
+padding: 20px 20px;
+background: #85DDDD;              
+cursor: pointer;
+width: auto;
+}
+ul li:hover {                        
+background: #E6ADDC;             
+color: #fff;                        
+}
+ul li ul {                            
+padding: 0;                       
+position: absolute;              
+top: 48px;                        
+left: -10000px;                 
+width: 150px;                  
+}
+ul li ul li {                        
+background: #E6ADDC;           
+display: block;                 
+color: #fff;                     
+}
+ul li ul li:hover { background: #85DDDD; } 
+ul li:hover ul {                 
+display: block;                
+left :0px;                        
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #E6ADDC;
+  min-width: 130px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 html{
 	box-sizing: border-box;
 }
@@ -43,11 +98,11 @@ h1 {
 	margin: 0;
 	line-height: 1.5;
 	text-align: center;
-	text-shadow: 0 1px 0 #ccc,
-               0 2px 0 #c9c9c9,
-               0 3px 0 #bbb,
+	text-shadow: 0 1px 0 #E6ADDC,
+               0 2px 0 #E6ADDC,
+               0 3px 0 #E6ADDC,
                0 4px 0 #b9b9b9,
-               0 5px 0 #aaa,
+               0 5px 0 #E6ADDC,
                0 6px 1px rgba(0,0,0,.1),
                0 0 5px rgba(0,0,0,.1),
                0 1px 3px rgba(0,0,0,.3),
